tests/ui/parser/issues/issue-66357-unexpected-unreachable.stderr
error: expected one of `,` or `:`, found `(`
  --> $DIR/issue-66357-unexpected-unreachable.rs:12:13
   |
LL | fn f() { |[](* }
   |             ^ expected one of `,` or `:`

error: expected one of `&`, `(`, `)`, `-`, `...`, `..=`, `..`, `[`, `_`, `box`, `mut`, `ref`, `|`, identifier, or path, found `*`
  --> $DIR/issue-66357-unexpected-unreachable.rs:12:13
   |
LL | fn f() { |[](* }
   |             ^^ help: `)` may belong here
   |             |
   |             unclosed delimiter

error: aborting due to 2 previous errors

